fix alignment with buttons and h1.

--- a/css/04-gallery.css
+++ b/css/04-gallery.css
@@ -5,7 +5,7 @@ Padding: 0 20%;
 }
 
 #row-gallery {
-  padding: 0 0 10px 15px;
+  padding: 0 0 10px 95px;
 }
 
 .row-image-button {
